--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -1,40 +1,45 @@
 form {
-  max-width: 500px;
-  margin: 3em auto;
-  padding: 2.5em;
+  max-width: 400px;
+  margin: 2.5rem auto;
+  padding: 2rem;
   background-color: #f9f9f9;
   border: 1px solid black;
-  border-radius: 15px;
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+  border-radius: 1.25rem;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
   color: #333;
 }
 
 h2 {
   text-align: center;
   color: #131a25;
-  margin-bottom: 1.5em;
-  font-size: 2em;
+  margin-bottom: 1.25rem;
+  font-size: 1.75rem;
 }
-
+p {
+  text-align: center;
+  color: #555;
+  margin-bottom: 2rem;
+  font-size: 1rem;
+}
 .control {
-  margin-bottom: 2em;
+  margin-bottom: 1.75rem;
 }
 
 label {
   display: block;
-  margin-bottom: 0.75em;
+  margin-bottom: 0.5rem;
   font-weight: bold;
   color: #131a25;
-  font-size: 1.2em;
+  font-size: 1rem;
 }
 
 input[type="text"],
 input[type="password"] {
   width: 100%;
-  padding: 1em 0 1em 1em;
+  padding: 0.75rem 0 0.75rem 0.75rem;
   border: 1px solid #ddd;
-  border-radius: 10px;
-  font-size: 1.2em;
+  border-radius: 0.75rem;
+  font-size: 1rem;
   color: #333;
   transition: border-color 0.3s ease, box-shadow 0.3s ease;
 }
@@ -48,8 +53,8 @@ input[type="password"]:focus {
 
 .control-error {
   color: #d9534f;
-  font-size: 0.875em;
-  margin-top: 0.5em;
+  font-size: 0.75rem;
+  margin-top: 0.5rem;
 }
 
 .control-error small {
@@ -58,16 +63,16 @@ input[type="password"]:focus {
 
 .form-actions {
   text-align: center;
-  margin-top: 2.5em;
+  margin-top: 2rem;
 }
 
 .button {
-  padding: 1em 2em;
+  padding: 0.75rem 1.5rem;
   background-color: #131a25;
   border: none;
-  border-radius: 10px;
+  border-radius: 0.75rem;
   color: #fff;
-  font-size: 1.2em;
+  font-size: 1rem;
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.3s ease;
 }
@@ -79,27 +84,53 @@ input[type="password"]:focus {
 
 .button:hover:not(.button-invalid) {
   background-color: #0f141d;
-  transform: translateY(-3px);
+  transform: translateY(-2px);
 }
 
 @media (max-width: 768px) {
   form {
-    max-width: 100%;
-    padding: 1.5em;
+    max-width: 60%;
+    padding: 1.25rem;
   }
 
   h2 {
-    font-size: 1.5em;
+    font-size: 1.25rem;
+  }
+  p {
+    font-size: 0.88rem;
+    margin-bottom: 1.25rem;
   }
 
   input[type="text"],
   input[type="password"] {
-    font-size: 1em;
-    padding: 0.75em;
+    font-size: 0.875rem;
+    padding: 0.5rem;
   }
 
   .button {
-    font-size: 1em;
-    padding: 0.75em 1.5em;
+    font-size: 0.875rem;
+    padding: 0.5rem 1rem;
+  }
+}
+
+@media (max-width: 480px) {
+  form {
+    max-width: 60%;
+    padding: 1rem;
+  }
+
+  h2 {
+    font-size: 1rem;
+  }
+
+  input[type="text"],
+  input[type="password"] {
+    font-size: 0.75rem;
+    padding: 0.5rem;
+  }
+
+  .button {
+    font-size: 0.75rem;
+    padding: 0.5rem 0.75rem;
   }
 }
