--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
   <h2>Login</h2>
-
+  <p>Enter your details below to login.</p>
   <div class="control">
     <label for="username">Username</label>
     <input
