--- a/src/app/main-page/create-forms/create-agent/create-agent.component.html
+++ b/src/app/main-page/create-forms/create-agent/create-agent.component.html
@@ -1,6 +1,6 @@
 <div class="modal-overlay"></div>
 <div class="form-container">
-  <h2><i class="fas fa-robot"></i> Create New Agent</h2>
+  <h2>Create New Agent<i class="fas fa-robot"></i></h2>
 
   <form [formGroup]="agentForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
