--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,13 @@
 /* Resets */
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  /* font-size: 10px; */
 }
 
 a {
@@ -20,11 +24,6 @@ button {
   background: none;
   border: none;
   cursor: pointer;
-}
-
-input,
-textarea {
-  box-sizing: border-box;
 }
 
 p,
