--- a/src/app/main-page/google-sheet/google-sheet.component.css
+++ b/src/app/main-page/google-sheet/google-sheet.component.css
@@ -13,29 +13,29 @@
 .navigation-tabs a {
   padding: 0.5rem 1.5rem;
   text-decoration: none;
-  color: #3c4043; /* Darker gray for default text color */
-  background-color: #e8eaed; /* Light gray background similar to Google Sheets */
+  color: #3c4043;
+  background-color: #e8eaed; 
   border: 1px solid #dadce0;
   border-bottom: none;
-  border-radius: 0.375rem 0.375rem 0 0; /* Rounded top corners */
+  border-radius: 0.375rem 0.375rem 0 0; 
   transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
   font-size: 1rem;
-  margin-right: -1px; /* Remove gap between tabs */
-  box-shadow: 0 2px 4px rgba(60, 64, 67, 0.15); /* Subtle shadow for depth */
+  margin-right: -1px; 
+  box-shadow: 0 2px 4px rgba(60, 64, 67, 0.15); 
 }
 
 .navigation-tabs a.active {
-  background-color: #ffffff; /* White background for the active tab */
-  color: #202124; /* Darker text color for active tab */
+  background-color: #ffffff; 
+  color: #202124; 
   border-bottom: 1px solid transparent;
   font-weight: bold;
-  box-shadow: none; /* No shadow for active tab */
+  box-shadow: none; 
 }
 
 .navigation-tabs a:hover {
-  background-color: #d2e3fc; /* Light blue background on hover */
-  color: #1967d2; /* Blue text on hover */
-  box-shadow: 0 4px 6px rgba(60, 64, 67, 0.2); /* Stronger shadow on hover */
+  background-color: #d2e3fc; 
+  color: #1967d2; 
+  box-shadow: 0 4px 6px rgba(60, 64, 67, 0.2); 
 }
 
 .crew-name {
@@ -44,8 +44,8 @@
 }
 
 .kickoff-btn {
-  background-color: #131a25; /* Google Blue for primary action */
-  color: #fff;
+  background-color: white; 
+  color: #000000;
 
   padding: 0.625rem 1rem;
   border-radius: 0.25rem;
@@ -59,11 +59,12 @@
 }
 
 .kickoff-btn:hover {
-  background-color: #000000; /* Darker blue on hover */
+  background-color: #000000; 
+  color: white
 }
 
 .delete-crew {
-  background-color: #d93025; /*a Google Red for delete action */
+  background-color: #d93025; 
   color: #fff;
   border: 1px solid #d93025;
   padding: 0.625rem 1rem;
