--- a/src/app/main-page/tables/table-agents/table-agents.component.html
+++ b/src/app/main-page/tables/table-agents/table-agents.component.html
@@ -13,7 +13,7 @@
             <th>Goal</th>
             <th>Tool</th>
             <th>Verbose</th>
-            <th>Actions</th>
+            <th>Del.</th>
           </tr>
         </thead>
         <tbody>
