--- a/src/app/main-page/tables/task-table/task-table.component.html
+++ b/src/app/main-page/tables/task-table/task-table.component.html
@@ -9,7 +9,7 @@
           <th>Description</th>
           <th>Expected Output</th>
           <th>Assigned Agent ID</th>
-          <th>Actions</th>
+          <th>Del.</th>
         </tr>
       </thead>
       <tbody>
